# HY_MCU_MOD

./: README.md
ESP32_MOD/: CMakeLists.txt
ESP32_MOD/Inc/HY_MOD/http/: basic.h  main.h  receive.h  send.h  task.h
ESP32_MOD/Inc/HY_MOD/main/: fn_state.h  typedef.h  variable_cal.h
ESP32_MOD/Inc/HY_MOD/packet/: json.h
ESP32_MOD/Inc/HY_MOD/spi/: basic.h  callback.h  main.h  task.h
ESP32_MOD/Inc/HY_MOD/wifi/: main.h
ESP32_MOD/Src/HY_MOD/http/: main.c  receive.c  send.c  task.c
ESP32_MOD/Src/HY_MOD/main/: variable_cal.c
ESP32_MOD/Src/HY_MOD/packet/: json.c
ESP32_MOD/Src/HY_MOD/spi/: basic.c  callback.c  main.c  task.c
ESP32_MOD/Src/HY_MOD/wifi/: main.c
STM32/Inc/HY_MOD/: cmds.h
STM32/Inc/HY_MOD/adc/: basic.h  main.h
STM32/Inc/HY_MOD/adc_current/: basic.h  main.h
STM32/Inc/HY_MOD/adc_hall/: basic.h  main.h
STM32/Inc/HY_MOD/dht/: basic.h  callback.h  main.h
STM32/Inc/HY_MOD/dht11/: basic.h  callback.h  main.h
STM32/Inc/HY_MOD/fdcan/: basic.h  callback.h  main.h  packet.h  pkt_read.h  pkt_write.h
STM32/Inc/HY_MOD/infrared/: basic.h  callback.h  main.h  transmit.h
STM32/Inc/HY_MOD/lcd_1inch47/: basic.h  font_8x16.h  main.h
STM32/Inc/HY_MOD/light/: basic.h  main.h
STM32/Inc/HY_MOD/main/: basic.h  buffer.h  fn_state.h  free_rtos.h  typedef.h  variable_cal.h
STM32/Inc/HY_MOD/motor/: README.md  basic.h  callback.h  clarke.h  ctrl_deg.h  ctrl_foc.h  main.h  motor_parameter.h  park.h  pi.h  rotor.h  svgendq.h  trigonometric.h
STM32/Inc/HY_MOD/packet/: basic.h  fdcan.h  json.h  raw_bytes.h
STM32/Inc/HY_MOD/rfid/: MFRC522_STM32.h  basic.h  (+1 more)
(+125 files in other folders)
